# bitslicereference

./: CMakeLists.txt  LICENSE.md  README.md  bitsliceref.hpp  tests.cpp
